--- a/ru_RU.lang
+++ b/ru_RU.lang
@@ -590,44 +590,44 @@ item.chargebonus.text=Charge
 # Golems 
 ########################
 # Traits
-golem.trait.deft=Deft
-golem.trait.text.deft=This golem has a great deal of manual dexterity and can perform tasks requiring precision and a delicate touch. Counters and countered by Clumsy.
-golem.trait.clumsy=Clumsy
-golem.trait.text.clumsy=This golem has almost no manual dexterity and cannot perform tasks requiring more than the most basic kind of interaction. Counters and countered by Deft.
-golem.trait.smart=Smart
-golem.trait.text.smart=This golem is nearly sentient with greater reasoning and decision making capabilities.
-golem.trait.wheeled=Wheeled
-golem.trait.text.wheeled=The golem propels itself using wheels. This gives it greater speed, but it is unable to jump or navigate steep slopes.
-golem.trait.light=Light Frame
-golem.trait.text.light=The golem is lighter than average which gives it increased speed and agility. Counters and countered by Heavy.
-golem.trait.heavy=Heavy Frame
-golem.trait.text.heavy=The golem is heavier than average which reduces its speed and agility. Counters and countered by Light.
-golem.trait.fragile=Fragile
-golem.trait.text.fragile=The golem is contructed from delicate components or weak materials which reduces its life total and armor rating. Counters and countered by Armored.
-golem.trait.armored=Armored
-golem.trait.text.armored=The golem is reinforced with additional material which increases its armor rating. Counters and countered by Fragile.
-golem.trait.repair=Improved Self Repair
-golem.trait.text.repair=The golem repairs any damage suffered at more than double the normal rate.
-golem.trait.fighter=Fighter
-golem.trait.text.fighter=The golem is capable of taking hostile action against other entities.
-golem.trait.flyer=Flyer
-golem.trait.text.flyer=The golem is capable of flight, giving it greater mobility at the cost of speed.
-golem.trait.climber=Climber
-golem.trait.text.climber=Sheer cliffs do not deter this golem. It can easily scale them to get to its destination.
-golem.trait.scout=Scout
-golem.trait.text.scout=The golem has a greater visual range and can operate in a much greater area (48 blocks range from home location instead of 32).
-golem.trait.fireproof=Fireproof
-golem.trait.text.fireproof=The golem is immune to fire damage.
-golem.trait.brutal=Brutal
-golem.trait.text.brutal=The golem inflicts greater melee damage in combat.
-golem.trait.breaker=Breaker
-golem.trait.text.breaker=The golem is capable of destroying most blocks with ease.
-golem.trait.hauler=Hauler
-golem.trait.text.hauler=Allows the golem to carry two stack of items instead of one.
-golem.trait.ranged=Ranged
-golem.trait.text.ranged=The golem can attack targets at range. 
-golem.trait.blastproof=Blastproof
-golem.trait.text.blastproof=The golem is highly resistant to explosion damage.
+golem.trait.deft=Ловкий
+golem.trait.text.deft=Этот голем обладает невероятной ловкостью рук и способен выполнять задачи, требующие точности и деликатного подхода. Несовместимо с Неуклюжий.
+golem.trait.clumsy=Неуклюжий
+golem.trait.text.clumsy=У этого голема отсутствует ловкость рук и он не способен выполнять задачи, требующие чего-либо, кроме простейших взаимодействий. Несовместимо с Ловкий.
+golem.trait.smart=Умный
+golem.trait.text.smart=Этот голем почти разумен и обладает отличными возможностями к мышлению и принятию решений.
+golem.trait.wheeled=Колесный
+golem.trait.text.wheeled=Голем перемещается с помощью колес. Это дает ему превосходную скорость, но лишает возможности прыгать и преодолевать крутые склоны.
+golem.trait.light=Легкий
+golem.trait.text.light=Этот голем легче обычного, что увеличивает его скорость и ловкость. Несовместимо с Тяжелый.
+golem.trait.heavy=Тяжелый
+golem.trait.text.heavy=Этот голем тяжелее обычного, что уменьшает его скорость и ловкость. Несовместимо с Легкий.
+golem.trait.fragile=Хрупкий
+golem.trait.text.fragile=Этот голем построен из тонких деталей или непрочных материалов, что уменьшает время его службы и показатель брони. Несовместимо с Бронированный.
+golem.trait.armored=Бронированный
+golem.trait.text.armored=Этот голем укреплен дополнительными материалами, что увеличивает его показатель брони. Несовместимо с Хрупкий.
+golem.trait.repair=Улучшеная самопочинка
+golem.trait.text.repair=Этот голем восстанавливается от любого полученного урона более чем в два раза быстрее.
+golem.trait.fighter=Боец
+golem.trait.text.fighter=Этот голем способен совершать агрессивные действия по отношению к другим существам.
+golem.trait.flyer=Летающий
+golem.trait.text.flyer=Этот голем способен летать, что дает ему невероятную подвижность, но снижает скорость.
+golem.trait.climber=Скалолаз
+golem.trait.text.climber=Крутые склоны не пугают этого голема. Он способен с легкостью их преодолевать по пути к своей цели.
+golem.trait.scout=Разведчик
+golem.trait.text.scout=Этот голем обладает превосходным зрением и может работать на больших дистанциях (Радиус работы 48 блоков вместо стандартных 32).
+golem.trait.fireproof=Огнеупорный
+golem.trait.text.fireproof=Этот голем неуязвим к урону огнем.
+golem.trait.brutal=Жестокий
+golem.trait.text.brutal=Этот голем наносит намного больше урона в ближнем бою.
+golem.trait.breaker=Крушитель
+golem.trait.text.breaker=Этот голем способен без проблем уничтожать любые блоки.
+golem.trait.hauler=Транспортировщик
+golem.trait.text.hauler=Позволяет голему переносить два стака предметов вместо одного.
+golem.trait.ranged=Стрелок
+golem.trait.text.ranged=Этот голем может атаковать цели с расстояния. 
+golem.trait.blastproof=Взрывоустойчивый
+golem.trait.text.blastproof=Этот голем имеет отличное сопротивление к урону от взрывов.
 #
 # Props 
 golem.material.wood=Greatwood
