--- a/ru_RU.lang
+++ b/ru_RU.lang
@@ -630,59 +630,59 @@ golem.trait.blastproof=Взрывоустойчивый
 golem.trait.text.blastproof=Этот голем имеет отличное сопротивление к урону от взрывов.
 #
 # Props 
-golem.material.wood=Greatwood
-golem.material.text.wood=The golem is crafted from greatwood. It is light and agile, but not particularly sturdy.
-golem.material.iron=Iron
-golem.material.text.iron=The golem is crafted from iron. It is sturdy and fireproof, but heavy.
-golem.material.brass=Brass
-golem.material.text.brass=The golem is crafted from brass. It is not as sturdy as iron nor as resistant to fire. Normally brass is heavier than iron, but it allows for superior construction methods which results in a much lighter frame.
-golem.material.clay=Clay
-golem.material.text.clay=The golem is crafted from baked clay. It is not a particularly sturdy material, but the resulting golem is fireproof and relatively light.
-golem.material.thaumium=Thaumium
-golem.material.text.thaumium=The golem is crafted from thaumium. It shares many characteristics with iron, though it is sturdier and more resistant to damage.
-golem.material.void=Void Metal
-golem.material.text.void=The golem is crafted from void metal. Slightly softer than iron, this metal makes up for it by being lighter and able to repair itself.
+golem.material.wood=Великое древо
+golem.material.text.wood=Голем создан из великого древа. Он легкий и ловкий, но не особенно прочный.
+golem.material.iron=Железо
+golem.material.text.iron=Голем создан из железа.Он прочный и огнеупорный, но тяжелый.
+golem.material.brass=Латунь
+golem.material.text.brass=Голем создан из латуни. Он не такой прочный как железный и не обладает хорошей защитой от огня. Обычно латунь тяжелее железа, но она позволяет использовать эффективные методы строительства, что делает голема легче.
+golem.material.clay=Глина
+golem.material.text.clay=Голем создан из обоженной глины. Это не особо прочный материал, но полученный голем будет огнеупорным и относительно легким.
+golem.material.thaumium=Тамиум
+golem.material.text.thaumium=Голем создан из тамиума. Он обладает характеристиками схожими с железом, но он прочнее и лучше защищает от урона.
+golem.material.void=Пустотный метал
+golem.material.text.void=Голем создан из пустотного металла. Этот металл немного мягче железа, что делает голема легче и дает ему возможность самопочинки.
 #
-golem.head.basic=Clockwork head
-golem.head.text.basic=The default golem head. No particular strengths or weaknesses.
-golem.head.smart=Smart head
-golem.head.text.smart=This head contains an advanced biothaumic brain, giving the golem greater capabilities and the ability to learn. 
-golem.head.smart_armored=Armored smart head
-golem.head.text.smart_armored=The smart head enhanced with additional armor and padding.
-golem.head.scout=Perceptive head
-golem.head.text.scout=The basic clockwork head enhanced with improved biothaumic eyes. 
-golem.head.smart_scout=Biothaumic head
-golem.head.text.smart_scout=Using both biothaumic eyes and brain, this head is the pinnacle of the biothaumic art. 
+golem.head.basic=Механическая голова
+golem.head.text.basic=Стандартная голова голема. Никаких заметных преимуществ или недостатков.
+golem.head.smart=Умная голова
+golem.head.text.smart=Эта голова содержит продвинутый биотаумический мозг, открывая голему новые возможности и позволяя ему обучаться. 
+golem.head.smart_armored=Бронированная умная голова
+golem.head.text.smart_armored=Умная голова, усиленная дополнительным слоем брони.
+golem.head.scout=Наблюдательная голова
+golem.head.text.scout=Обычная механическая голова улучшеная парой биотаумических глаз. 
+golem.head.smart_scout=Биотаумическая голова
+golem.head.text.smart_scout=Используя биотаумические глаза и мозг, это голова вершина биотаумического искусства. 
 #
-golem.arm.basic=Basic arms
-golem.arm.text.basic=The default golem arms and hands. No particular strengths or weaknesses.
-golem.arm.fine=Fine manipulators
-golem.arm.text.fine=These arms end in delicate and dexterous hands. 
-golem.arm.claws=Claw arms
-golem.arm.text.claws=These arms end in a terrifying pair of razor sharp metal pincers. Comes with a built-in aggression module.
-golem.arm.breakers=Breaker arms
-golem.arm.text.breakers=These arms end in a pair of pneumatic, diamond tipped grinders. 
-golem.arm.darts=Dart launchers
-golem.arm.text.darts=These arms end in a pair of pneumatic dart launchers. The darts are magically created as they are needed. Comes with a built-in aggression module.
+golem.arm.basic=Базовые руки
+golem.arm.text.basic=Стандартные руки голема. Никаких заметных преимуществ или недостатков.
+golem.arm.fine=Точные манипуляторы
+golem.arm.text.fine=Эти руки удобные и ловкие. 
+golem.arm.claws=Когтистые руки
+golem.arm.text.claws=Эти руки заканчиваются ужасающей парой острых металлических клещей. Идут с встроенным модулем агрессии.
+golem.arm.breakers=Дробящие руки
+golem.arm.text.breakers=Эти руки заканчиваются парой пневматических измельчителей с алмазными наконечниками. 
+golem.arm.darts=Метатели дротиков
+golem.arm.text.darts=Эти руки заканчиваются парой пневматических метателей дротиков. Дротики создаются с помощью магии, когда они нужны. Идут с встроенным модулем агрессии.
 #
-golem.leg.walker=Basic legs
-golem.leg.text.walker=A pair of simple legs. No particular strengths or weaknesses.
-golem.leg.roller=Uni-wheel 
-golem.leg.text.roller=A single wheel. Quite fast, but incapable of jumping or going up steep hills.
-golem.leg.climber=Climbing legs
-golem.leg.text.climber=A pair of simple legs enhanced with crampons and other devices allowing for vertical ascent.
-golem.leg.flyer=Levitation module
-golem.leg.text.flyer=A modified arcane levitator granting the golem the power of flight. Reduces speed by a third.
+golem.leg.walker=Базовые ноги
+golem.leg.text.walker=Пара простых ног. Никаких заметных преимуществ или недостатков.
+golem.leg.roller=Моноцикл
+golem.leg.text.roller=Одно колесо. Довольно быстрое, но неспособно прыгать или преодолевать крутые склоны.
+golem.leg.climber=Цепкие ноги
+golem.leg.text.climber=Пара простых ног с шипами и другими устройствами, позволяющими вертикальное восхождение.
+golem.leg.flyer=Модуль левитации
+golem.leg.text.flyer=Модифицированный магический левитатор дает голему силу полета. Уменьшает скорость на треть.
 #
-golem.addon.armored=Armor plating
-golem.addon.text.armored=Grants the golem increased durability.
-golem.addon.fighter=Aggression module
-golem.addon.text.fighter=Allows the golem to engage in combat.
-golem.addon.hauler=Carry Frame
-golem.addon.text.hauler=Allows the golem to carry two stack of items instead of one.
+golem.addon.armored=Броня
+golem.addon.text.armored=Дает голему увеличенную прочность.
+golem.addon.fighter=Модуль агрессии
+golem.addon.text.fighter=Позволяет голему вступать в бой.
+golem.addon.hauler=Транспортировочный каркас 
+golem.addon.text.hauler=Позволяет голему переносить два стака предметов вместо одного.
 #
-golem.follow=I'm coming Master
-golem.stay=I will stay here Master
+golem.follow=Я следую, Хозяин
+golem.stay=Я буду ждать здесь, Хозяин
 #
 # Fluids
 ##############################
